TGUI Door hacking (#2003)
* initial draft

* layout changes, backend work

* cleanup

* cleanup, rebuild

* more cleanup

* cleanup

* rebuild

* scss changes

* removed transition property

* how the fuck did these end up here

* removed unused procs

* rebuild

* fixed inconsistent spelling of signaler

* stray comment removed

* inconsistent whitespacing but mostly just to trigger checks

* Update tgui/packages/tgui/interfaces/Airlock.js

Co-authored-by: Mordent <62817778+mordent-goonstation@users.noreply.github.com>

* review changes

* rebuild

* rebuild

* rebuild

Co-authored-by: Mordent <62817778+mordent-goonstation@users.noreply.github.com>

--- a/tgui/packages/tgui/styles/components/Button.scss
+++ b/tgui/packages/tgui/styles/components/Button.scss
@@ -40,6 +40,10 @@ $bg-map: colors.$bg-map !default;
     background-color: lighten($color, 15%);
     color: $text-color;
   }
+
+  &:active {
+    background-color: lighten($color, 60%);
+  }
 }
 
 .Button {
