Refactored uiCurrentUserPermissions (thanks style) added multiple windows to switch to, to allow dynamic window sizes

--- a/tgui/packages/tgui/styles/interfaces/Airlock.scss
+++ b/tgui/packages/tgui/styles/interfaces/Airlock.scss
@@ -1,7 +1,7 @@
 @use '../colors.scss';
 @use '../components/Button.scss';
 
-.airlock-wires-btn {
+.AccessPanel-wires-btn {
   &.Button--selected {
     @include Button.button-color(colors.bg(colors.$average));
   }
