--- a/tgui/packages/tgui/styles/interfaces/CloningConsole.scss
+++ b/tgui/packages/tgui/styles/interfaces/CloningConsole.scss
@@ -1,55 +1,80 @@
-@use '../colors.scss';
-@use '../components/Button.scss';
+/**
+* @file
+* @copyright 2020
+* @author ThePotato97 (https://github.com/ThePotato97)
+* @license ISC
+*/
 
-.Cloning-Console_FlexTable {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  overflow: none;
-  width: 100vw;
-  height: 295px;
-}
-.Cloning-Console_FlexHead {
-  display: flex;
-  flex: 0 0 auto;
-  height: 25px;
-  padding: 0 5px;
-  font-size: 12px;
-}
-.Cloning-Console_HeadRow {
-  display: flex;
-  flex: 1 1 auto;
-  text-transform: uppercase;
-  align-items: center;
-  justify-content: space-between;
-}
-.Cloning-Console_HeadRow_Item {
-  display: flex;
-  text-transform: uppercase;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-}
-.Cloning-Console_HeadRow_Item {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
-  overflow-x: auto;
-  padding: 0 5px;
-}
-.Cloning-Console_BodyRow {
-  display: flex;
-  height: 30px;
-  align-items: center;
-  justify-content: space-around;
-  flex: 0 0 auto;
-}
-.Cloning-Console_BodyRow_Item {
-  display: flex;
-  height: 20px;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.cloning-console {
+  &__flex {
+    &__table {
+      /* Display & Box Model */
+      position: relative;
+      display: flex;
+      overflow: none;
+      width: 100vw;
+      height: 290px;
+      /* Text Styling */
+      flex-direction: column;
+    }
+    &__head {
+      /* Display & Box Model */
+      display: flex;
+      height: 25px;
+      flex: 0 0 auto;
+      padding: 0 5px;
+      /* Text Styling */
+      font-size: 12px;
+    }
+  }
+  &__head {
+    &__row {
+      /* Display & Box Model */
+      display: flex;
+      flex: 1 1 auto;
+      align-items: center;
+      justify-content: space-between;
+      /* Text Styling */
+      text-transform: uppercase;
+    }
+    &__item {
+      /* Display & Box Model */
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      /* Text Styling */
+      text-transform: uppercase;
+    }
+    &__item {
+      /* Display & Box Model */
+      display: flex;
+      flex: 1 1 auto;
+      flex-direction: column;
+      padding: 0 5px;
+      /* Text Styling */
+      overflow-x: auto;
+    }
+  }
+  &__body {
+    &__row {
+      /* Positioning & Sizing */
+      display: flex;
+      height: 30px;
+      flex: 0 0 auto;
+      align-items: center;
+      justify-content: space-around;
+    }
+    &__item {
+      /* Display & Box Model */
+      display: flex;
+      overflow: hidden;
+      height: 20px;
+      align-items: center;
+      justify-content: center;
+      /* Text Styling */
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
 }
