Test easier to use? cloning UI

--- a/tgui/packages/tgui/styles/interfaces/CloningConsole.scss
+++ b/tgui/packages/tgui/styles/interfaces/CloningConsole.scss
@@ -13,7 +13,7 @@
       display: flex;
       overflow: none;
       width: 100vw;
-      height: 290px;
+      height: 234px;
       /* Text Styling */
       flex-direction: column;
     }
@@ -40,17 +40,10 @@
     &__item {
       /* Display & Box Model */
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px;
-      /* Text Styling */
-      text-transform: uppercase;
-    }
-    &__item {
-      /* Display & Box Model */
-      display: flex;
       flex: 1 1 auto;
       flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
       padding: 0 5px;
       /* Text Styling */
       overflow-x: auto;
@@ -60,7 +53,7 @@
     &__row {
       /* Positioning & Sizing */
       display: flex;
-      height: 30px;
+      height: 25px;
       flex: 0 0 auto;
       align-items: center;
       justify-content: space-around;
@@ -72,8 +65,10 @@
       height: 20px;
       align-items: center;
       justify-content: center;
+
       /* Text Styling */
       text-overflow: ellipsis;
+      text-shadow: 0 0 4px #000;
       white-space: nowrap;
     }
   }
