added paper in the canister UI (needs testing)

--- a/tgui/packages/tgui/styles/interfaces/Paper.scss
+++ b/tgui/packages/tgui/styles/interfaces/Paper.scss
@@ -18,3 +18,10 @@
   color: rgb(92, 92, 92);
   box-shadow:inset 0px 0px 0px 3px rgb(82, 82, 82);
 }
+
+.Paper__Stamp {
+  position: absolute;
+  position: absolute;
+  user-select: none;
+  pointer-events: none;
+}
