--- a/tgui/packages/tgui/styles/themes/paper.scss
+++ b/tgui/packages/tgui/styles/themes/paper.scss
@@ -6,21 +6,24 @@
 @use 'sass:color';
 @use 'sass:meta';
 
-@use '../colors.scss' with (
+@use '~tgui/styles/colors.scss' with (
   $primary: #ffffff,
   $bg-lightness: -25%,
   $fg-lightness: -10%,
+  $label: #3b3b3b,
+  // Makes button look actually grey due to weird maths.
+  $grey: #ffffff,
   // Commenting out color maps will adjust all colors based on the lightness
   // settings above, but will add extra 10KB to the theme.
-  $fg-map-keys: (),
-  $bg-map-keys: (),
+  // $fg-map-keys: (),
+  // $bg-map-keys: (),
 );
-@use '../base.scss' with (
+@use '~tgui/styles/base.scss' with (
   $color-fg: #000000,
-  $color-bg: #ffffff,
+  $color-bg: #eeeeee,
+  $color-bg-section: #ffffff,
   $color-bg-grad-spread: 0%,
 );
-
 $font-size: 24px;
 
 // A fat warning to anyone who wants to use this: this only half works.
@@ -45,9 +48,11 @@ $font-size: 24px;
   ));
 
   // Layouts
-  @include meta.load-css('../layouts/Layout.scss');
-  @include meta.load-css('../layouts/Window.scss');
-  @include meta.load-css('../layouts/TitleBar.scss', $with: (
+  @include meta.load-css('~tgui/styles/layouts/Layout.scss', $with: (
+    'scrollbar-color-multiplier': -1,
+  ));
+  @include meta.load-css('~tgui/styles/layouts/Window.scss');
+  @include meta.load-css('~tgui/styles/layouts/TitleBar.scss', $with: (
     'text-color': rgba(0, 0, 0, 0.75),
     'background-color': base.$color-bg,
     'shadow-color-core': rgba(0, 0, 0, 0.25),
