Added tooltips that show when span is overflowed

--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -39,6 +39,7 @@
 @include meta.load-css('./components/Tabs.scss');
 @include meta.load-css('./components/TextArea.scss');
 @include meta.load-css('./components/Tooltip.scss');
+@include meta.load-css('./components/TooltipOverflow.scss');
 
 // Interfaces
 @include meta.load-css('./interfaces/Airlock.scss');
