--- a/tgui/packages/tgui/styles/interfaces/Paper.scss
+++ b/tgui/packages/tgui/styles/interfaces/Paper.scss
@@ -1,26 +1,28 @@
 /**
-* @file
-* @copyright 2020
-* @author ThePotato97 (https://github.com/ThePotato97)
-* @license ISC
-*/
+  * @file
+  * @copyright 2020
+  * @author ThePotato97 (https://github.com/ThePotato97)
+  * @license ISC
+  */
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
-.Paper__Stamp-Text {
-  position: absolute;
-  padding: 0.55rem 0.5rem;
-  font-family: 'Anton';
-  font-size: 1.5rem;
-  font-weight: 500;
-  text-align: center;
-  text-transform: uppercase;
-  color: rgb(92, 92, 92);
-  box-shadow:inset 0px 0px 0px 3px rgb(82, 82, 82);
-}
+
 
 .Paper__Stamp {
   position: absolute;
-  user-select: none;
   pointer-events: none;
+  user-select: none;
+  &-Text {
+    @extend .Paper__Stamp;
+    height: 40px;
+    padding: 0.55rem 0.5rem;
+    box-shadow:inset 0px 0px 0px 3px rgb(82, 82, 82);
+    color: rgb(92, 92, 92);
+    font-family: 'Anton';
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+  }
 }
