--- a/tgui/packages/tgui/styles/interfaces/Paper.scss
+++ b/tgui/packages/tgui/styles/interfaces/Paper.scss
@@ -8,21 +8,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 
-
-.Paper__Stamp {
-  position: absolute;
-  pointer-events: none;
-  user-select: none;
-  &-Text {
-    @extend .Paper__Stamp;
-    height: 40px;
-    padding: 0.55rem 0.5rem;
-    box-shadow:inset 0px 0px 0px 3px rgb(82, 82, 82);
-    color: rgb(92, 92, 92);
-    font-family: 'Anton';
-    font-size: 1.5rem;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
+.paper {
+  &__stamp {
+    position: absolute;
+    pointer-events: none;
+    user-select: none;
+    &-text {
+      @extend .paper__stamp;
+      overflow: hidden;
+      height: 40px;
+      padding: 0.55rem 0.5rem;
+      box-shadow:inset 0px 0px 0px 3px rgb(82, 82, 82);
+      color: rgb(92, 92, 92);
+      font-family: 'Anton';
+      font-size: 1.5rem;
+      font-weight: 500;
+      text-align: center;
+      text-transform: uppercase;
+      white-space: nowrap;
+    }
+  }
+  &__page {
+    word-break: break-word;
+    word-wrap: break-word;
   }
 }
