--- a/tgui/packages/tgui/styles/interfaces/PINInputModal.scss
+++ b/tgui/packages/tgui/styles/interfaces/PINInputModal.scss
@@ -1,5 +1,47 @@
-.PINInput .Button {
-  width: 3rem;
-  height: 3rem;
+/**
+ * @file
+ * @copyright 2024
+ * @author ZeWaka (https://github.com/ZeWaka)
+ * @license MIT
+ */
+
+@import "../colors.scss";
+
+.PINInput {
+  display: flex;
+  justify-content: center;
+
+  .Button {
+    display: flex;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.7rem;
+
+    // Center icon buttons
+    .Icon {
+      margin-left: -0.1em;
+    }
+  }
+}
+
+// Style each individual digit into a box
+.PINInput__digit {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.7rem;
+  border: 1px solid $label;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  padding: 0.4rem;
+  margin: 0.3rem;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
