--- a/tgui/packages/tgui/styles/components/Dimmer.scss
+++ b/tgui/packages/tgui/styles/components/Dimmer.scss
@@ -3,6 +3,10 @@
  * SPDX-License-Identifier: MIT
  */
 
+@use '../base.scss';
+
+$background-dimness: 0.75 !default;
+
 .Dimmer {
   // Align everything in the middle.
   // A fat middle finger for anything less than IE11.
@@ -16,7 +20,7 @@
   left: 0;
   right: 0;
   // Dim everything around it
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, $background-dimness);
   z-index: 1;
 }
 
