kill the old way of rendering foreground icons - also support for rainbows

--- a/tgui/packages/tgui/styles/interfaces/ClothingBooth.scss
+++ b/tgui/packages/tgui/styles/interfaces/ClothingBooth.scss
@@ -1,19 +1,6 @@
 @use '../base.scss';
 @use '../colors.scss';
 
-@use 'sass:math';
-
-// Corresponds to positions on `..\assets\swatch_icons.svg`.
-$swatch_icons: (
-  swatch-bisect_left: 0 0,
-  swatch-bisect_right: 1 0,
-  swatch-polkadots: 2 0,
-  swatch-heart: 3 0,
-  swatch-diamond: 4 0,
-  swatch-club: 5 0,
-  swatch-spade: 6 0,
-);
-
 .clothingbooth {
   &__dropdown {
     margin-bottom: 0 !important;
@@ -51,18 +38,13 @@ $swatch_icons: (
       }
     }
     &_icon {
-      background-image: url('../assets/swatch_icons.svg');
-      background-repeat: no-repeat;
+      &_swatch-rainbow {
+        background-image: linear-gradient(45deg, red,orange,yellow,green,blue,indigo,violet);
+      }
     }
   }
 
   &__groupingtag {
       border-radius: base.$border-radius;
-  }
-}
-
-@each $name, $pos in $swatch_icons {
-  .clothingbooth__swatch_icon_#{$name} {
-    background-position: (math.div(nth($pos, 1) * 100%, 6)) (math.div(nth($pos, 2) * 100%, 1));
   }
 }
