--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -70,6 +70,7 @@
 @include meta.load-css('./interfaces/Phone.scss');
 @include meta.load-css('./interfaces/PINInputModal.scss');
 @include meta.load-css('./interfaces/PortableAtmos.scss');
+@include meta.load-css('./interfaces/TraitorTips.scss');
 @include meta.load-css('./interfaces/WeaponVendor.scss');
 
 // Layouts
